--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 <head>
   <title>Weather</title>
   <!-- require files here -->
+    <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script> -->
+
+  <script src="js/vendor/jquery-1.8.3.min.js"></script>
+  <script src="js/vendor/Chart.min.js"></script>
+  <script src="js/weatherChart.js"></script>
+  <script src="js/init.js"></script>
 </head>
 <body>
+    <h1> Weather Underground</h1>
   <canvas id="NYCWeatherChart" width="800" height="400"></canvas>
+
 </body>
 </html>
